--- a/howdy.html
+++ b/howdy.html
@@ -4,6 +4,6 @@
     <title>My Online Shop</title>
   </head>
   <body>
-    Howdy Universe!
+    Howdy Universe! Howdy Multiverse!
   </body>
 </html>
