Added a second more expansive greeting to all beings

--- a/howdy.html
+++ b/howdy.html
@@ -4,6 +4,6 @@
     <title>My Online Shop</title>
   </head>
   <body>
-    Howdy Universe!
+    Howdy Universe! Greetings to all beings everywhere!
   </body>
 </html>
