Added message greeting all beings

--- a/howdy.html
+++ b/howdy.html
@@ -4,6 +4,7 @@
     <title>My Online Shop</title>
   </head>
   <body>
-    Howdy Universe! Howdy Multiverse!
+    Howdy Universe! Howdy Multiverse!<br>
+    Howdy all beings everywhere - have a great day!
   </body>
 </html>
