add new line about wilderness

--- a/howdy.html
+++ b/howdy.html
@@ -7,5 +7,6 @@
     Howdy Universe! Howdy Multiverse!<br>
     Howdy all beings everywhere - have a great day!
     Woohoooooo this is wild
+    Out in the wilderness now!
   </body>
 </html>
